--- a/public/themes/custom/julkaisut/assets/styles/gutenberg/blocks/media-text.scss
+++ b/public/themes/custom/julkaisut/assets/styles/gutenberg/blocks/media-text.scss
@@ -18,6 +18,8 @@
     position: relative;
     overflow: hidden;
 
+    --layer-width: min(100vw, var(--alignfull-width));
+
     // Editor
     [data-type="core/media-text"] > & {
       background-color: inherit;
@@ -26,12 +28,15 @@
     &::after {
       z-index: 2;
       position: absolute;
-      width: 100vw;
-      height: 100vw;
+      width: var(--layer-width);
+      height: var(--layer-width);
       display: block;
       content: '';
       mask-image: svg-load('./images/koros/basic.svg'), svg-load('./images/koros/rect.svg');
-      transform: translate(-50vw, -50%) rotate(130deg);
+      transform: translate(
+        calc(-1 * var(--layer-width) / 2),
+        -50%
+      ) rotate(130deg);
       background-color: inherit;
       left: 0;
     }
@@ -47,6 +52,17 @@
       width: 130%;
       padding-top: var(--spacing-layout-l);
       padding-bottom: var(--spacing-layout-l);
+    }
+
+    // Align it with the page layout
+    &.alignfull .wp-block-media-text__content {
+      padding-left: var(--viewport-gutter);
+
+      @include mq($from: xlarge) {
+        padding-left: calc((
+          min(100vw, var(--alignfull-width)) - var(--alignwide-width)) / 2
+        );
+      }
     }
 
     @include mq($until: medium) {
